8일차 블록체인 html 구현 2번째 차

--- a/templates/pages/home.gohtml
+++ b/templates/pages/home.gohtml
@@ -1,27 +1,16 @@
+{{define "home"}}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="IE=edge">
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
-    <title>무가치형 코인</title>
-</head>
+{{template "head" .PageTitle}}
 <body>
-   <header>
-       <h1>{{.PageTitle}}</h1>
-   </header>
-    <main>
 
+ {{template "header" .PageTitle}}
+    <main>
      {{range .Blocks}}
-       <section>
-            <ul>
-                <li>{{.Data}}</li>
-                <li>{{.Hash}}</li>
-                <li>{{.PrevHash}}</li>
-            </ul>
-       </section>
+         {{template "block" .}}
      {{end}}
     </main>
-
+{{template "footer"}}
 </body>
 </html>
+{{end}}
