--- a/templates/partials/head.gohtml
+++ b/templates/partials/head.gohtml
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+{{define "head"}}
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+    <title> {{.}} | 무가치형 코인</title>
 </head>
-<body>
 
-</body>
-</html>
+{{ end}}
