--- a/templates/pages/add.gohtml
+++ b/templates/pages/add.gohtml
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="IE=edge">
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
-    <title>무가치형 코인</title>
-</head>
-<body>
-   <header>
-       <h1>{{.PageTitle}}</h1>
-   </header>
-
-
-</body>
-</html>
+{{define "add"}}
+    <!DOCTYPE html>
+    <html lang="en">
+    {{template "head" "Add"}}
+    <body>
+    {{template "header" "Add"}}
+    <main>
+       <form method="POST" >
+           <input type="text" placeholder="data for block" name="blockData" required />
+           <button type="submit" >제출</button>
+       </form>
+    </main>
+    {{template "footer"}}
+    </body>
+    </html>
+{{end}}
