--- a/templates/partials/fotter.gohtml
+++ b/templates/partials/fotter.gohtml
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{{define "footer"}}
+<footer>&copy; 2021 무가치성 코인</footer>
+{{end}}
