--- a/explorer/templates/partials/head.gohtml
+++ b/explorer/templates/partials/head.gohtml
@@ -5,6 +5,9 @@
     <meta http-equiv="x-ua-compatible" content="IE=edge">
     <link rel="stylesheet" href="https://unpkg.com/mvp.css">
     <title> {{.}} | 무가치형 코인</title>
+{{/*    // 벨류 전달이 가능핟. 한개의 스트링 데이터라서. 가능하다.*/}}
+
+
 </head>
 
 {{ end}}
